# AoC_2020

./: README.md  pyproject.toml
Day_01/: 01_Report_Repair.py  01_Report_Repair2.py  01_Report_Repair_golf1_1.py  01_Report_Repair_golf1_2.py  01_Report_Repair_golf2_1.py  01_Report_Repair_golf2_2.py
Day_02/: 02_Password_Philosophy_1.py  02_Password_Philosophy_2.py  02_Password_Philosophy_golf_1.py  02_Password_Philosophy_golf_2.py
Day_03/: 03_Toboggan_Trajectory_1.py  03_Toboggan_Trajectory_2.py
Day_04/: 04_Passport_Processing_1.py  04_Passport_Processing_2.py
Day_05/: 05_Binary_Boarding.py  05_Binary_Boarding_Golf.py  05_Binary_Boarding_Golf2.py
Day_06/: 06_Custom_Customs_1.py  06_Custom_Customs_2.py
Day_07/: 07_Handy_Haversacks.py  MCounter.py
Day_08/: 08_Handheld_Halting_1.py  08_Handheld_Halting_2.py
Day_09/: 09_Encoding_Error.py  09_Encoding_Error_1.py
Day_10/: 10_Adapter_Array_1.py  10_Adapter_Array_2.py
Day_11/: 11_1.py  11_2.py
Day_12/: 12_Rain_Risk_1.py  12_Rain_Risk_2.py
Day_13/: 13_Shuttle_Search_1.py  13_Shuttle_Search_2.py
Day_14/: 14_Docking_Data_1.py  14_Docking_Data_2.py
Day_15/: 15_Rambunctious_Recitation_1.py  15_Rambunctious_Recitation_2.py
Day_16/: 16_Ticket_Translation_1.py  16_Ticket_Translation_2.py
Day_17/: 17.in  17_Conway_Cubes_1.py  17_Conway_Cubes_2.py
Day_18/: 18_Operation_Order_1.py  18_Operation_Order_2.py
Day_19/: 19_Monster_Messages_1.py  19_Monster_Messages_2.py
Day_20/: 20_1.py  20_2.py  20_Jurassic_Jigsaw.py
Day_21/: 21.in  21_Allergen_Assessment.py
Day_22/: 22.in  22_Crab_Combat_1.py  (+1 more)
(+5 files in other folders)
